--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     
+    <section>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="row justify-content-center flashes">
+            <h4 class="text-center">{{ message }}</h4>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </section>
    
     <main class="container">
         {% block content %}
