--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>Document</title>
+    <title>Santa's Kitchen Helper {% block extra_title %}{% endblock %}</title>
 </head>
 <body>
-    
+
     <section>
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -20,11 +21,14 @@
         {% endif %}
         {% endwith %}
     </section>
-   
+
     <main class="container">
         {% block content %}
         {% endblock %}
     </main>
-    
+
+
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
