Updated auth system for email

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,5 +3,5 @@
 
 <h1>Profile Page</h1>
     <h3>{{ username }}'s Profile</h3>
-        
+    <a href="{{ url_for('logout') }}">Log Out</a>
 {% endblock %}
