--- a/templates/login.html
+++ b/templates/login.html
@@ -5,21 +5,17 @@
 
 <div class="card">
     <div class="row">
-      <form method="POST" action="{{ url_for('login') }}">
+      <form action="" method="post">
         <div class="form-group">
-          <input id="username" name="username" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$"
-            class="validate" required>
-          <label for="username">Username</label>
+            <label for="InputEmail">Email address</label>
+            <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
-        <div class="form-group">
-          <input id="password" name="password" type="password" minlength="5" maxlength="15"
-            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-          <label for="password">Password</label>
+          <div class="form-group">
+            <label for="InputPassword">Password</label>
+            <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
         </div>
-        <button type="submit" class="btn">Log In</button>
-        <small class="text-muted">
-          Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
-        </small>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
   </div>
