--- a/templates/register.html
+++ b/templates/register.html
@@ -4,26 +4,30 @@
 <div class="card">
     <div class="card-body">
         <div class="row ">
-            <form method="POST" action="{{ url_for('register') }}">
+            <form action="" method="post">
                 <div class="form-group">
-                    <input id="username" name="username" type="text" minlength="5" maxlength="15"
-                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                    <label class="text-dark" for="username">Username</label>
-                </div>
+                    <label for="Username">Full name</label>
+                    <input name="username" class="form-control" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter username">
+                    <small id="userName" class="form-text text-muted">Please enter your username</small>
+              </div>
+              <div class="form-group">
+                    <label for="InputEmail">Email address</label>
+                    <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              </div>
+              <div class="form-group">
+                <label for="InputPassword">Password</label>
+                <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Password">
+              </div>
+            
                 <div class="form-group">
-                    <input id="email" name="email" type="email" minlength="5"  class="validate" required>
-                    <label class="text-dark" for="email">Email</label>
+                <label for="InputPassword2">Repeat Password</label>
+                <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repeat Password">
+            
                 </div>
-                <div class="form-group">
-                    <input id="password" name="password" type="password" minlength="5" maxlength="15"
-                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                    <label class="text-dark" for="password">Password</label>
-                </div>
-                
-                <button type="submit" class="btn">Register</button>
-                <small class="text-muted">
-                    Already have An Account? <a class="ml-2" href="{{ url_for('login') }}">Log In</a>
-                </small>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            
+            
             </form>
         </div>
     </div>
