--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+.color-codes{
+    color: #FD5E53;
+    color: #F9FCFB;
+    color: #B0EACD;
+    color: #21BF73;
+}
+
 /* -------------------- General */
 /* ----- General */
+body {
+    background: url("../images/holiday-background.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /* -------------------- Index */
 /* ----- General */
 /* ----- Calendar */
+/* contianer */
 .calendar-container {
-
+    /* position: relative; */
 }
-
+/* name text shadow */
+.header-name-shadow {
+    filter: drop-shadow(1px 1px 2px #010203);
+    text-shadow: 2px 2px 4px #010203,
+                -2px -2px 6px #010203;
+}
+/* SVG */
 .calendar-container svg {
     margin-top: 1rem;
     width: 100%;
+    fill:#faf9f6;
+    font-family: "Emilys Candy", sans-serif;
+    font-size: 1.25rem;
 }
+
+.svg-font {
+    /* font-family: ; */
+}
+
+/* calendar peep view */
+.calendar-image {
+    position: absolute;
+    margin-top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 100px;
+    width:  100px;
+    border-radius: 50%;
+    background-color: #B0EACD;
+    background: url("../images/dummy-calendar.jpg");
+    box-shadow: 2px 2px 4px rgba(51, 51, 51, 0.692),
+                -2px -2px 4px rgba(51, 51, 51, 0.692),
+                inset 2px 2px 2px #5f5f5fb9,
+                inset -2px -2px 2px #5f5f5fb9;
+
+    /* border: solid 2px #21BF73; */
+}
+
