--- a/templates/register.html
+++ b/templates/register.html
@@ -1,35 +1,50 @@
 {% extends "base.html" %}
 {% block content %}
-<h3>Register</h3>
-<div class="card">
-    <div class="card-body">
-        <div class="row ">
-            <form action="" method="post">
-                <div class="form-group">
-                    <label for="Username">Full name</label>
-                    <input name="username" class="form-control" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter username">
-                    <small id="userName" class="form-text text-muted">Please enter your username</small>
-              </div>
-              <div class="form-group">
-                    <label for="InputEmail">Email address</label>
-                    <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-              <div class="form-group">
-                <label for="InputPassword">Password</label>
-                <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Password">
-              </div>
-            
-                <div class="form-group">
-                <label for="InputPassword2">Repeat Password</label>
-                <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repeat Password">
-            
-                </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            
-            
-            </form>
-        </div>
-    </div>
+<div class="text-center pt-5 mt-5">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Register
+</button>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="" method="post">
+          <div class="form-group">
+              <label for="Username">Username</label>
+              <input name="username" class="form-control" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter username">
+              <small id="userName" class="form-text text-muted">Please enter your username</small>
+        </div>
+        <div class="form-group">
+              <label for="InputEmail">Email address</label>
+              <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="InputPassword">Password</label>
+          <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Password">
+        </div>
+      
+          <div class="form-group">
+          <label for="InputPassword2">Repeat Password</label>
+          <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repeat Password">
+      
+          </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      
+      
+      </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>    
     {% endblock %}
