--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="text-center text-light">Log In</h3>
-
-<div class="card">
-    <div class="row">
-      <form action="" method="post">
-        <div class="form-group">
-            <label for="InputEmail">Email address</label>
-            <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-          <div class="form-group">
-            <label for="InputPassword">Password</label>
-            <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </div>
-
-<!--<div class="text-center pt-5 mt-5">
+<div class="text-center pt-5 mt-5">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Login
   </button>
@@ -52,6 +33,6 @@
       </div>
     </div>
   </div>
-</div>-->
+</div>
 
   {% endblock %}
