--- a/templates/event.html
+++ b/templates/event.html
@@ -20,7 +20,7 @@
                 <!-- Inner content column -->
                 <div class="col">
                     <div class="row text-center">
-                        <h3>Family Name</h3>
+                        <h3 class="family-name">Family Name</h3>
                     </div>
                     <div class="row">
                         <div class="col-4 col-md-3">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="row food-list-row">
                         <textarea name="food-needed-list" id="food-needed-list" readonly>
-                            
+
                         </textarea>
                     </div>
                     <div class="row">
@@ -95,11 +95,8 @@
         </div>
 
         <!-- Empty Bottom Row / Placeholder -->
-        <div class="row">
+        <div class="row"></div>
     </form>
 </div>
 
-</div>
-
 {% endblock %}
-
