--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Profile Page</h1>
-    <h3>{{ user }}'s Profile</h3>
+    <h3>{{ username }}'s Profile</h3>
     <a href="{{ url_for('logout') }}">Log Out</a>
     <div class="text-center pt-5 mt-5">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -60,4 +60,18 @@
 </div>
 </div>
 </div>
+
+{% for event in events %}
+<div class="container h-100 w-50 bg-light">
+    {{ event.name }} {{ event.date }}
+</div>
+<div class="container h-100 w-50 bg-light">
+    {{ event.family }}
+</div>
+<div class="container h-100 w-50 bg-light">
+    {{ event.description }}
+</div>
+{% endfor %}
+
+
 {% endblock %}
