--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        {% if session.user %}
+                        {% if session.email %}
                         <li class="nav-item">
                             <a class="nav-link">Events</a>
                         </li>
