--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Profile Page</h1>
-    <h3>{{ username }}'s Profile</h3>
-    <a href="{{ url_for('logout') }}">Log Out</a>
+<div class="row">
+    <h1 class="col text-center">Profile Page</h1>
+</div>
+<div class="row">
+    <div class="col-12 col-md-6 col-lg-3">
+        <div class="row justify-content-center">
+            <h3 class="col-12 text-center">{{ user.name }}'s Profile</h3>
+            <img src="{{ url_for('static', filename='images/placeholder-user.jpg') }}" alt="User avatar" class="col-12 user-avatar">
+            <button class="btn btn-primary col-6" onclick="showEdit();">
+                Edit Profile
+            </button>
+        </div>
+        <div class="row">
+            <div class="form-container-fluid col-12 mx-auto hide" id="edit-profile-form">
+                <form method="POST" action="{{ url_for('edit_profile', user_id=user._id) }}">
+                    <div class="input-group mb-3" id="user_username">
+                        <span class="input-group-text" id="username">Username</span>
+                        <input type="text" class="form-control" value="{{ user.name }}" aria-label="Username"
+                            aria-describedby="username" name="username" required>
+                    </div>
+        
+                    <div class="input-group mb-3" id="user_email">
+                        <span class="input-group-text" id="email">Email</span>
+                        <input type="text" class="form-control" value="{{ user.email }}" aria-label="Email"
+                            aria-describedby="email" name="email">
+                    </div>
+                    <div class="input-group mb-3" id="user_password">
+                        <span class="input-group-text" id="password">New Password</span>
+                        <input type="text" class="form-control" placeholder="Enter new password" aria-label="New Password"
+                            aria-describedby="Change password" name="password">
+                    </div>
+                    <div class="input-group mb-3" id="user_old_password">
+                        <span class="input-group-text" id="old_password">Old Password</span>
+                        <input type="text" class="form-control" placeholder="Enter previous password" aria-label="Old Password"
+                            aria-describedby="previous password" name="old_password">
+                    </div>
+                    <button type="submit" class="btn btn-primary float-end">Update</button>
+                </form>
+                <button class="btn btn-secondary"
+                onclick="showEdit();">
+                Close
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-9">
+    </div>    
+</div>
+
+
+
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 {% endblock %}
