--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,3 +123,19 @@ body {
     height: 100px;
 }
 
+/* Santa letter modal style */
+.santa-letter {
+    background: url(../images/santa-letter.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
+    padding: 0;
+    position: relative;
+    top: 500px;
+    width: 100%;
+    height: 100%;
+}
+
+.letter-body p {
+    margin: 10px 30px;
+}
