Move letter image from CSS to HTML

--- a/templates/letter.html
+++ b/templates/letter.html
@@ -4,6 +4,7 @@
 
         </div>
         <div class="col santa-letter">
+            <img src="/static/images/santa-letter.png" alt="">
             <div class="row letter-head">
                 <div class="col text-center">
                     <h3>Dear Santa,</h3>
