--- a/templates/base.html
+++ b/templates/base.html
@@ -20,34 +20,34 @@
         <nav class="navbar navbar-expand-lg navbar-bg px-3 py-2">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ url_for('hello_world')}}">
-                    <img src="{{ url_for('static', filename='images/candy-cane.png') }}" alt="">
+                    <img src="{{ url_for('static', filename='images/candy-cane.png') }}" alt="Candy Cane Icon">
                 </a>
                 <!-- Desktop Nav -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        {% if session.user %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('event')}}">Events</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('profile')}}">Profile</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
-                            </li>
+                        {% if session.email %}
+                        <li class="nav-item">
+                            <a class="nav-link">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('profile')}}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Logout</a>
+                        </li>
                         {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('hello_world')}}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('login')}}">Login</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('register')}}">Register</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="{{ url_for('hello_world')}}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('login')}}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('register')}}">Register</a>
+                        </li>
                         {% endif %}
                         <li class="nav-item">
                             <a class="nav-link">Contact</a>
@@ -55,13 +55,14 @@
                     </ul>
                 </div>
                 <!-- Side Nav -->
-                <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas"
+                <button class="sidenav-btn btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasRight"
                     aria-labelledby="offcanvasRightLabel">
-                    <div class="offcanvas-header">
+                    <div class="offcanvas-header align-items-center">
+                        <img src="{{ url_for('static', filename='images/candy-cane.png') }}" alt="Candy Cane Icon">
                         <h5 id="offcanvasRightLabel">Santa's Kitchen Helper</h5>
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
