--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'home' %}
 {% block content %}
     <!-- Floating text and transparent circle -->
     <div class="container-fluid calendar-background">
