--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'register' %}
 {% block content %}
 <div class="text-center pt-5 mt-5">
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
