--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,12 @@
                 Edit Profile
             </button>
         </div>
-        <!-- Create event modal -->
+        <div class="row justify-content-center">
+            <button class="btn btn-success col-6" data-bs-toggle="modal" data-bs-target="#familyModal">
+                Create Family
+            </button>
+        </div>
+        <!-- Edit profile form -->
         <div class="row">
             <div class="form-container-fluid col-12 mx-auto hide" id="edit-profile-form">
                 <form method="POST" action="{{ url_for('edit_profile', user_id=user._id) }}">
@@ -128,6 +133,38 @@
                         </button>
                         <button>
                             Cancel
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for creating famnily -->
+<div class="modal fade" id="familyModal" tabindex="-1" aria-labelledby="familyModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="familyModalLabel">Login</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="{{ url_for('family') }}" method="POST">
+                    <div class="form-group">
+                        <label for="name">Family Name<span class="require">*</span></label>
+                        <input type="text" class="form-control" id="family_name" name="family_name" minlength="5" maxlength="50"
+                            required />
+                    </div>
+                    <div class="form-group">
+                        <p><span class="require">*</span> - required fields</p>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">
+                            Create
                         </button>
                     </div>
                 </form>
