--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                                 href="{{ url_for('profile')}}">Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Logout</a>
+                            <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
