Add santa letter modal style and background image

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,25 @@
                                 <h5 class="modal-title" id="exampleModalLabel"></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div> -->
-                            <div class="modal-body paper-background" >
-                                <h2> Dear Santa</h2>
+                            <div class="modal-body santa-letter" >
+                                <h2> Dear Santa,</h2>
                                 <p>
-                                    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque 
-                                    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi 
-                                    architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
-                                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione 
-                                    voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit 
-                                    amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                                    labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum 
-                                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi 
-                                    consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam 
-                                    nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                                    This year I want a very different gift for Christmas.<br>
+                                    Every past year, it took my family so much time to organise the holiday events.<br>
+                                    There were so many phone calls, so much chaos and eventually people still forgot what they were supposed to do or bring. <br>
+                                    I still haven't forgiven uncle Bob for not bringing his famous gingerbread cookies!<br>
+                                    <br>
+                                    For that reason, I want my present to be one of your elves, so they can help us with the events.<br>
+                                    Preferrably, he could make a list of all our family events and show them on a shared board.<br>
+                                    On that board, I also want to have what food will be present. It is important to have the right expectations, you know.<br>
+                                    That way, each person could tell the elf what they will bring to the event and the elf will note it.<br>
+                                    <br>
+                                    This would help everyone enjoy Christmas so much more. <br>
+                                    <br>
+                                    Yours sincerely, <br>
+                                    A big fan<br>
+                                    <br>
+                                    P.S. If none of your elves are available, a PlayStation 5 will do.
                                 </p>
                             </div>
                             <div class="modal-footer remove-border">
