--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap');
 
 .color-codes {
     color: #FD5E53;
@@ -272,16 +273,19 @@ body {
 
 /* Santa letter modal style */
 .santa-letter {
-    margin: auto;
+    /* margin: 20px auto;
     padding: 0;
-    position: relative;
-    top: 500px;
     width: 100%;
-    height: 100%;
+    height: 100%; */
+    background-image: url(../images/santa-letter.png);
+    background-size: 100% 100%;
+    padding: 6%;
+    font-family: 'Fuzzy Bubbles', sans-serif;
 }
 
-.letter-body p {
-    margin: 10px 30px;
+.santa-letter h2 {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 /* Profile page */
